# autofigure_pptx

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  goal.md  plan.md
examples/: multimodal_fusion.md  pipeline.md  teacher_student.md
renderer/: package-lock.json  package.json
renderer/src/: runtime.ts  safe_api.ts
scripts/: extract_method_templates.sh  extract_reference_previews.sh  run_real_env.sh  run_real_loop.sh
src/: agent.rs  cli.rs  config.rs  lib.rs  main.rs  pipeline.rs  prompts.rs  schema.rs  style.rs
src/llm/: chat_provider.rs  mock.rs  mod.rs  openai_compatible.rs  openai_images.rs  openrouter_image.rs  replicate.rs
src/tools/: asset_gen.rs  canonicalize.rs  cost.rs  doctor.rs  draw_plan.rs  export.rs  generated_code.rs  mod.rs  pptx_codegen.rs  render.rs  review.rs  template_library.rs  validate.rs  workspace.rs
templates/method_overview/: method_templates.json  reference_figures.json
tests/: agent_code_bundle_tests.rs  asset_tests.rs  canonicalize_tests.rs  config_tests.rs  doctor_tests.rs  draw_plan_diff_tests.rs  draw_plan_tests.rs  export_tests.rs  openai_compatible_tests.rs  openrouter_tests.rs  pipeline_fallback_tests.rs  pipeline_nonmock_tests.rs  pipeline_tests.rs  plan_normalize_tests.rs  prompt_tests.rs  reference_library_tests.rs  render_fallback_tests.rs  render_region_layout_tests.rs  review_tests.rs  safety_tests.rs  schema_tests.rs  style_tests.rs  template_library_tests.rs  workspace_pipeline_tests.rs  workspace_tests.rs
